--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,19 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --text: #171717;
+  --surface: #171717;
+  --primary: #3e1ac2;
 }
 
 @theme inline {
   --color-background: var(--background);
-  --color-foreground: var(--foreground);
+  --color-text: var(--text);
+  --color-surface: var(--surface);
+  --color-primary: var(--primary);
+  --color-accent: var(--accent);
+  --color-error: var(--error);
+
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
@@ -15,12 +22,21 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --text: #ededed;
+
+
+    /* colors from coolors.co */
+    --surface: #424B54; /*Charcoal*/
+    --primary: #86A397; /*Cambridge Blue*/
+    --accent: #E5BE9E; /*Dessert Sand*/
+    --error: #6E0E0A; /*Blood Red*/
+
+    --temp: #ECA400; /*harvest gold*/
   }
 }
 
 body {
   background: var(--background);
-  color: var(--foreground);
+  color: var(--text);
   font-family: Arial, Helvetica, sans-serif;
 }
