--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,8 +15,8 @@
   --color-accent: var(--accent);
   --color-error: var(--error);
 
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-serif: var(--font-heading);
+  --font-sans: var(--font-body);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -38,5 +38,5 @@
 body {
   background: var(--background);
   color: var(--text);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-body), sans-serif;
 }
